styles.css
* {
    box-sizing: border-box;   
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    overflow: hidden;
}

#container {
    display: flex;
    flex-direction: column;
    border: 1px solid black;
    align-items: center;
    height: 480px;
    width: 350px;
    max-width: 100vw;
    min-width: 350px;
}

.display {
    display: flex;
    margin-top: 10px;
    width: 300px;
    flex-wrap: wrap;
    border: 2px solid black;
    align-items: center;
    font-size: 58px;
    justify-content: end;
    background-color: gray;
    height: 80px;
    max-height: 80px;
    font-family: orbitron;
}


.buttons {
    display: flex;
    margin-top: 10px;
    width: 300px;
    justify-content: space-between;
    min-width: 300px;
}

.numbers {
    display: flex;
    flex-wrap: wrap;
    flex:3;
    overflow: hidden;
    flex-direction: column;
}

.numbers_top {
    display: flex;
    flex-wrap: wrap;
}

.numbers_top > button {
    width: 75px;
    border-radius: 5px;
    aspect-ratio: 1/1;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: x-large;
    font-style: oblique;
}



.numbers_bot {
    display: flex;
    height: 20%;
}

.numbers_bot > button {
    border-radius: 5px;
    font-size: x-large;
    font-style: oblique;
}

.num_0 {
    width: 150px;
    height: 100%;
}

.num_dot {
    width: 75px;
    aspect-ratio: 1/1;
}

.operators {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex: 1;
}

.operators > button {
    background-color: rgb(241, 189, 77);
    border-radius: 5px;
    aspect-ratio: 1/1;
    display: flex;
    justify-content: center;
    font-size: x-large;
    font-style: oblique;
    align-items: center;
}

